1.4.0-vcli-alpha Sara

* Writing designing the tables for the meandre server tracking

* Adding shutdown hooks for proper cleaning of service status

* Starting the backend addapters to allow consistent backend storage usage

* Fix to the webuidispatcher set done.

* More rearranging of the log levels 

* Modified the log formatter. Beside rearranging the info fields, not it displays properly on different OS

* Fix to avoiding the core config file to be overwritten

* Fix to the store properties to avoid overwriting the existing file

* Update the version number to 1.4.0-vcli-alpha 

* Changed added some info login on the MeandreServer operations

* Fixed VFServlet nonsensical login message levels

* Fixed the JarToolServlet login of the exceptions

* Reshaping the logger to make it leaner:
	- most conductor messages move to fine
	- store messages moved to config when possible
	- wrapped component toned down a bit

* Removing JMX and the rmi registry to avoid problems on concurrent testing

* Removing terracota test


1.3.1cli Xuixo

* Updated Xstream library to 1.3 July 19th 2008

* Added simple formatter for the logger July 19th 2008


1.3.1cli Xuixo

* Changed the software revision string to be of the format ##.##.##

*Added a JMX based probe implementation for tying the component and the flow lifecycle with other applications.
-This functionality allows the engine to send notifications to an embedded JMX server and other 
applications (not running in the same JVM or host as the engine is) to monitor when a new 
Flow starts/ends/aborts and the port number it starts on etc. It also allows the application to check the
status of the components -i.e if a particular component has been fired or not  -or for example if it has
pushedData out of the port or not.  These messages/notifications become useful when I am trying to integrate 
with other applications where we want to be able to inform the user  running a web browser what's going on with 