@@ -12,7 +12,7 @@
 				 uptime REAL default 0, 
 				 free_memory REAL default 0, 
 				 failed_updates INTEGER default 0, 
-				 primary key(ID));
+				 primary key(ID))
 	</entry>
 	<entry key="CREATE_SERVER_INFO_TABLE">
 			CREATE TABLE IF NOT EXISTS meandre_server_info 
@@ -29,25 +29,90 @@
 				 java_vm_version VARCHAR(20),
 				 java_vm_vendor VARCHAR(20),
 				 user_name VARCHAR(20),
+				 user_home VARCHAR(255))
+	</entry>
+	<entry key="CREATE_SERVER_LOG_TABLE">
+			CREATE TABLE IF NOT EXISTS meandre_server_log 
+				(ID CHAR(16), 
+				 status CHAR(1) default 'D', 
+				 uptime REAL default 0, 
+				 failed_updates INTEGER default 0,
+				 ip CHAR(15) default '127.0.0.1', 
+				 name CHAR(40) default 'localhost', 
+				 port INTEGER default 1714, 
+				 memory_available BIGINT,
+				 number_processors INTEGER,
+				 os_arch VARCHAR(40), 
+				 os_name VARCHAR(40), 
+				 os_version VARCHAR(40), 
+				 java_version VARCHAR(20),
+				 java_vm_version VARCHAR(20),
+				 java_vm_vendor VARCHAR(20),
+				 user_name VARCHAR(20),
 				 user_home VARCHAR(255),
-				 primary key(ID));
+				 ts TIMESTAMP)
 	</entry>
 	<entry key="DROP_SERVER_STATUS_TABLE">
-			DROP TABLE meandre_server_status;
+			DROP TABLE meandre_server_status
 	</entry>
 	<entry key="DROP_SERVER_INFO_TABLE">
-			DROP TABLE meandre_server_info;
+			DROP TABLE meandre_server_info
+	</entry>
+	<entry key="DROP_SERVER_LOG_TABLE">
+			DROP TABLE meandre_server_log
 	</entry>
 	<entry key="INSERT_SERVER_STATUS">
 			INSERT INTO meandre_server_status (ID,status,updated,free_memory) 
 				VALUES (?,?,?,?) 
-				ON DUPLICATE KEY UPDATE status=?, previous_updated=updated, updated=?, uptime=uptime+updated-previous_updated;
+				ON DUPLICATE KEY UPDATE status=?, previous_updated=updated, updated=?, uptime=uptime+updated-previous_updated
 	</entry>
 	<entry key="INSERT_SERVER_INFO">
 			INSERT INTO meandre_server_info (ID,ip,name,port,memory_available,number_processors,os_arch,os_name,os_version,java_version,java_vm_version,java_vm_vendor,user_name,user_home) 
-				VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?) ;
+				VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?) 
 	</entry>
 	<entry key="DELETE_SERVER_STATUS">
-			DELETE FROM meandre_server_status WHERE ID=?;
+			DELETE FROM meandre_server_status WHERE ID=?
+	</entry>
+	<entry key="DELETE_SERVER_INFO">
+			DELETE FROM meandre_server_info WHERE ID=?
+	</entry>
+	<entry key="LOG_SERVER_UNREGISTER">
+			INSERT INTO meandre_server_log (
+					ID,
+					status,
+					uptime,
+					failed_updates,
+					ip,
+					name,
+					port,
+					memory_available,
+					number_processors,
+					os_arch, 
+				 	os_name, 
+				 	os_version, 
+				 	java_version,
+				 	java_vm_version,
+				 	java_vm_vendor,
+				 	user_name,
+				 	user_home
+				)
+				SELECT s.ID,
+				       'U',
+				       s.uptime,
+				       s.failed_updates,
+				       i.ip,
+				       i.name,
+				       i.port,
+				       i.memory_available,
+				       i.number_processors,
+				       i.os_arch,i.os_name,
+				       i.os_version,
+				       i.java_version,
+				       i.java_vm_version,
+				       i.java_vm_vendor,
+				       i.user_name,
+				       i.user_home 
+			       FROM meandre_server_status AS s LEFT JOIN meandre_server_info AS i ON s.ID=i.ID
+			       WHERE s.ID=?
 	</entry>
 </properties>
